# UV-Helloworld

./: pyproject.toml
src/explore_uv/: main.py
